<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomControls" />

    <LinearLayout
        android:id="@+id/bottomControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <Button
                android:id="@+id/btnAudio"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/audio_mode"
                android:backgroundTint="@color/accent_blue"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:drawableStart="@android:drawable/ic_lock_silent_mode_off"/>

            <Button
                android:id="@+id/btnShare"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="Share Info"
                android:backgroundTint="@android:color/holo_green_dark"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:drawableStart="@android:drawable/ic_menu_share"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previous"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/primary_dark"/>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/primary_red"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>